2005-11-12  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/EnumSyntax/serialize.java: New test
	* gnu/testlet/javax/print/attribute/EnumSyntax/equals.java: New test.
	* gnu/testlet/javax/print/attribute/EnumSyntax/WrongEnumSyntax.java,
	* gnu/testlet/javax/print/attribute/EnumSyntax/CorrectEnumSyntax.java:
	New helper classes for serialization and equal tests.

2005-11-12  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/java/io/File/emptyFile.java: New test. 

2005-11-12  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/java/io/ObjectInputStream/readResolve.java: New test.
	* gnu/testlet/java/io/ObjectInputStream/ReadResolveHelper.java:
	New Helper class for readResolve test. 
    
2005-11-09  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/SwingUtilities/replaceUIActionMap.java: 
	New test.

2005-11-09  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JList/constructors.java: New test,
	* gnu/testlet/javax/swing/JList/getBackground.java: New test,
	* gnu/testlet/javax/swing/JList/getSelectionBackground.java: New test,
	* gnu/testlet/javax/swing/JList/setBackground.java: New test,
	* gnu/testlet/javax/swing/JList/setModel.java: New test,
	* gnu/testlet/javax/swing/JList/setSelectionBackground: New test.

2005-11-08  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/SimpleTestHarness.java: Don't implement config.
	(getSourceDirectory): Removed.
	(getTempDirectory): Removed.
	(getPathSeparator): Removed.
	(getSeparator): Removed.
	(getMailHost): Removed.
	* gnu/testlet/TestHarness.java: Implements config.
	(getSourceDirectory): Added.
	(getTempDirectory): Added.
	(getPathSeparator): Added.
	(getSeparator): Added.
	(getMailHost): Added.
	* gnu/testlet/BinaryCompatibility/BinaryCompatibilityTest.java:
	Don't cast to SimpleTestHarness.
	* gnu/testlet/java/io/File/jdk11.java: Likewise.
	* gnu/testlet/java/net/Socket/SocketTest.java: Likewise.